Closed
Bug 869703
Opened 12 years ago
Closed 12 years ago
WebGL failure retrieving uniform
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: ra.vitillo, Assigned: ra.vitillo)
Details
Attachments
(2 files, 2 obsolete files)
|
3.96 KB,
text/plain
|
Details | |
|
2.86 KB,
patch
|
ryanvm
:
checkin+
|
Details | Diff | Splinter Review |
The attached test generates the following error (v. 20.0.1):
Warning: Error: WebGL: UniformMatrix2fv: this function expected a uniform of element size 4, got a uniform of element size 0
Source File: file:///home/vitillo/sandbox/webgl/Tut04/test.html
Line: 33
The issue seems to be that an uniform info is retrieved only on demand by reading the information from the attached shaders. If the program has been successfully linked and the shaders detached then the search will fail. Nevertheless the operation should succeed even if the shaders have been detached after linking.
| Assignee | ||
Comment 1•12 years ago
|
||
Comment 2•12 years ago
|
||
Comment on attachment 746674 [details] [diff] [review]
Patch with a possible solution.
Review of attachment 746674 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good, but we should add this assert.
::: content/canvas/src/WebGLProgram.cpp
@@ -224,4 @@
>
> WebGLUniformInfo
> WebGLProgram::GetUniformInfoForMappedIdentifier(const nsACString& name) {
> - if (!mUniformInfoMap) {
Assert that mUniformInfoMap is present.
Attachment #746674 -
Flags: review+
Updated•12 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•12 years ago
|
||
Great analysis and patch! Thanks!
Comment 5•12 years ago
|
||
Indeed, please make a version of the patch with a commit message
Bug xxx - what the patch actually does - r=jgilbert
and flag the patch with 'checkin?'
| Assignee | ||
Comment 6•12 years ago
|
||
Attachment #746674 -
Attachment is obsolete: true
Attachment #757583 -
Flags: checkin?
Flags: needinfo?(ra.vitillo)
Updated•12 years ago
|
Keywords: checkin-needed
Updated•12 years ago
|
Attachment #757583 -
Flags: checkin?
Comment 7•12 years ago
|
||
This patch doesn't apply. Please make sure it was generated per the directions below.
https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
Keywords: checkin-needed
| Assignee | ||
Comment 8•12 years ago
|
||
Attachment #757583 -
Attachment is obsolete: true
Attachment #758183 -
Flags: checkin?
Updated•12 years ago
|
Attachment #758183 -
Flags: checkin? → checkin+
Comment 9•12 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/5443b4e12cda
Thanks for the patch, Roberto! :)
Assignee: nobody → ra.vitillo
Comment 10•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•