Bug 869703 - Fix failure to retrieve uniform. r=jgilbert